test/zinc_source/compile_errors/modules/04_missing_module.zn
// expected-error: module not found: modules/_lib/missing
import modules/_lib/missing

fn main() {
    print(1)
}
